Fix z-index to prevent Leaflet map from displaying on top

--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -54,7 +54,7 @@
     position: fixed;
     top: 1em;
     right: 1em;
-    z-index: 1000;
+    z-index: 1002;
     border: 2px solid #fff;
     background-color: var(--main-color);
     display: grid;
@@ -72,7 +72,7 @@
   .nav_menu .nav_links {
     flex-direction: column;
     position: fixed;
-    z-index: 1;
+    z-index: 1001;
     inset: 0;
     left: revert;
     width: 50%;
@@ -86,7 +86,6 @@
 
   .nav_menu.open .nav_links {
     transform: translateX(0);
-    z-index: 999;
   }
 
   .nav_menu .nav_links a {
